system/boot-operator-remote/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-boot-operator-boot-service-tcp-8082-from-kube-system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - port: 8082
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: boot-operator-remote
      app.kubernetes.io/name: boot-operator-core
      control-plane: controller-manager
  policyTypes:
  - Ingress
